<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.redcells.searchview">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="19dp"
        android:text="@string/ji"
        android:textColor="#008000" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/search"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView4"
        android:contentDescription="@string/todo" />

    <TextView
        android:text="@string/search_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView4"
        android:layout_marginTop="18dp"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginStart="26dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_toEndOf="@+id/textView12"
        android:entries="@array/blood_type" />

    <TextView
        android:text="@string/blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/textView12"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/spinner3"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"

        android:text="@string/location" />

    <AutoCompleteTextView
        android:id="@+id/spinner4"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignStart="@+id/spinner3"
        android:layout_alignBottom="@+id/textView13"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="-29dp"
        android:layout_marginBottom="-13dp"
        android:drawableEnd="@drawable/ic_gps_fixed_black_24dp"
        android:hint="@string/enter_you_city"
        android:textColorHint="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/button3"
        android:background="#f31c45"
        android:textColor="#ffffff"
        android:layout_below="@+id/spinner4"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
