<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.redcells.OTP">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/verify_your_phone_number"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/redcells_will_send_an_sms_message_to_verify_your_mobile_number_enter_your_county_code_and_phone_number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/otpd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/awaiting_otp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phnum"
        android:autofillHints="" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"


        android:layout_marginTop="36dp"
        android:hint="@string/_91"
        android:inputType="number"
        android:maxLength="2"
        android:nextFocusLeft="@id/phnum"
        android:nextFocusUp="@id/phnum"
        android:nextFocusDown="@id/phnum"
        android:nextFocusForward="@id/phnum"
        app:layout_constraintEnd_toStartOf="@+id/phnum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phnum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/code"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        android:autofillHints="" />

    <Button
        android:id="@+id/send"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="150dp"
        android:background="#3F51B5"
        android:text="@string/send_otp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/carrier_charges_may_apply"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpd" />


</androidx.constraintlayout.widget.ConstraintLayout>