<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:gravity="center"
    android:paddingTop="0dp"
    tools:context=".Home">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/search"
        android:id="@+id/imageView2"
        android:layout_marginEnd="24dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/user"
        android:id="@+id/imageView"

        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:text="@string/new_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="31dp" />

    <TextView
        android:text="@string/donor_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignEnd="@+id/imageView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="107dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/news"
        android:contentDescription="@string/todo" />


</RelativeLayout>
